style and button changes

--- a/index.html
+++ b/index.html
@@ -9,3 +9,7 @@ Median
 <div class="road" id="b2"></div>
 <div class="road" id="b3"></div>
 </div>
+
+<button id="start-button" onclick="simBegin(100)">start</button>
+
+<button id="stop-button" onclick="simEnd()" disabled>stop</button>
